--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>Hola boludos del mundo desde el curso de node</h1>
+    <button id="btn">
+        click
+    </button>
+    <script>
+        const btn = document.querySelector('#btn')
+        btn.addEventListener('click',function(){
+            alert('Hello world')
+        })
+
+    </script>
 </body>
 </html>
